[tool.poetry]
name = "game_engine"
version = "0.1.0"
description = "Game engine for poker game"
authors = ["Yassine K"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
